@@ -252,7 +252,15 @@ class FileTests(unittest.TestCase):
         verifyClass(HTTPRangeInterface, File)
         verifyClass(WriteLockInterface, File)
 
-
+    def testUnicodeWithIndexHtml(self):
+        # Introduced to help test the fact that Image.py has been
+        # changed to be lenient towards any basestring type, not just str
+        
+        val = u'some unicode string here'
+        self.file.manage_edit('foobar', 'text/plain', filedata=val)
+        s = self.file.index_html(self.app.REQUEST, self.app.REQUEST.RESPONSE)
+        self.assertEquals(s, val)
+        
 class ImageTests(FileTests):
     data = open(filedata, 'rb').read()
     content_type = 'image/gif'
@@ -284,7 +292,6 @@ class ImageTests(FileTests):
         from webdav.WriteLockInterface import WriteLockInterface
 
         verifyClass(WriteLockInterface, Image)
-
 
 def test_suite():
     return unittest.TestSuite((
